--- a/templates/student_profile.html
+++ b/templates/student_profile.html
@@ -9,25 +9,26 @@
 </head>
 
 <body>
-    <!-- Top Navigation --> 
+      
     <header class="top-nav">
-        <button onclick="window.location.href='student_dashboard.html'">Dashboard</button>
-        <button onclick="window.location.href='update_profile.html'">Update Profile</button>
-        <button onclick="window.location.href='login.html'">Logout</button>
-    </header>
-
-    <!-- <aside class="sidebar">
-        <h2>TaskFlow</h2>
-        <nav>
-            <ul>
-                <li><a href="student_dashboard.html">Dashboard</a></li>
-                <li><a href="update_profile.html">Update Profile</a></li>
-                <li><a href="login.html">Logout</a></li>
-            </ul>
-        </nav>
-    </aside> --> 
-
-    <!-- Main Profile Section -->
+        <button><a href="/student-dashboard">Dashboard</a></button>
+        <form action="/logout", method="POST">
+        <button type="submit">Logout</button>
+        </form>
+    </header> 
+       <!-- <aside class="sidebar">
+            <h2>TaskFlow</h2>
+            <nav>
+                <ul>
+                    <li><a href="">Dashboard</a></li>
+                    <li><a href="/student/profile">View Profile</a></li>
+                    <li><form action="/logout", method="POST">
+                        <button type="submit">Logout</button>
+                    </form></li>
+                </ul>
+            </nav>
+        </aside> -->
+    
     <main class="profile">
         <div class="banner">
             <div class="profile-pic"></div>
@@ -43,7 +44,7 @@
             <p><strong>Name:</strong> {{ user.name }}</p>
             <p><strong>Email ID:</strong> {{ user.email }}</p>
             <p><strong>Resume:</strong> 
-                <a href="{{ user.resume }}" target="_blank">View Resume</a>
+                <a href="{{ user.resume_link }}" target="_blank">View Resume</a>
             </p>
         </section>
 
@@ -68,5 +69,7 @@
         </section>
     </main>
 
-</body>
+</body> 
+
+  
 </html>
