--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -43,9 +43,11 @@
 
   <!-- Top Navigation -->
   <header class="top-nav">
-    <button onclick="window.location.href='student_dashboard.html'">Dashboard</button>
-    <button class="logout-btn" onclick="window.location.href='login.html'">Logout</button>
-  </header>
+    <button><a href="/student-dashboard">Dashboard</a></button>
+    <form action="/logout", method="POST">
+    <button type="submit">Logout</button>
+    </form>
+</header> 
 
   <!-- <aside class="sidebar">
     <h2>TaskFlow</h2>
@@ -61,7 +63,7 @@
   <main class="profile-edit-container">
     <h2>Edit Profile</h2>
 
-    <form method="POST" action="/update_profile">
+    <form method="POST" action="/update-profile-student">
       <!-- Name -->
       <label for="name">Name</label>
       <input type="text" id="name" name="name" value="{{ user.name }}" required />
@@ -95,7 +97,7 @@
 
       <!-- Resume Link -->
       <label for="resume">Resume Link</label>
-      <input type="url" id="resume" name="resume" value="{{ user.resume }}" required />
+      <input type="url" id="resume" name="resume_link" value="{{ user.resume_link }}"/>
 
       <!-- Projects -->
       <label>Projects</label>
