--- a/templates/ProDes.html
+++ b/templates/ProDes.html
@@ -6,7 +6,7 @@
     <title>Project Description</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../static/project.css">
+    <link rel="stylesheet" href="../static/pro.css">
     <style>
         .navbar {
             display: none;
