--- a/templates/professor_dashboard.html
+++ b/templates/professor_dashboard.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professor Dashboard</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../static/professor_dashboard.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         .navbar {
             display: none;
@@ -19,10 +19,9 @@
     </style>
 </head>
 <body>
-    <aside class="sidebar">
-        <div class="menu-icon"><i class="fas fa-bars"></i></div>
-        <h2>TaskFlow</h2>
-        <nav>
+    <div class="menu-icon"><i class="fas fa-bars"></i></div>
+        <nav class="navbar">
+            <h2>Dashboard</h2>
             <ul>
                 <li><a href="professor_dashboard.html">Dashboard</a></li>
                 <li><a href="professor_profile.html">View Profile</a></li>
@@ -30,9 +29,10 @@
                 <li><a href="manageProject.html">Manage Projects</a></li>
                 <li><a href="login.html">Logout</a></li>
             </ul>
+            <ul>
+                <li><a href="logout.html" class="logout">Logout</a></li>
+            </ul>
         </nav>
-    </aside>
-
     <main class="dashboard-container">
         <header class="top-banner">
             <h2>Hey, {{ user.name }}!</h2>
