--- a/templates/manageProject.html
+++ b/templates/manageProject.html
@@ -23,16 +23,15 @@
     <div class="container">
         <div class="menu-icon"><i class="fas fa-bars"></i></div>
         <nav class="navbar">
-            <h2>Dashboard</h2>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="web_development.html">Web Development</a></li>
+            <h2>TaskFlow</h2>
+           <ul>
+                <li><a href="professor_dashboard.html">Dashboard</a></li>
+                <li><a href="professor_profile.html">View Profile</a></li>
+                <li><a href="Create.html">Create Project</a></li>
+                <li><a href="manageProject.html">Manage Projects</a></li>
+                <li><a href="login.html">Logout</a></li>
             </ul>
-            <ul>
-                <li><a href="logout.html" class="logout">Logout</a></li>
-            </ul>
+
         </nav>
 
         <div class="main-content">
