--- a/templates/professor_dashboard.html
+++ b/templates/professor_dashboard.html
@@ -21,7 +21,7 @@
 <body>
     <div class="menu-icon"><i class="fas fa-bars"></i></div>
         <nav class="navbar">
-            <h2>Dashboard</h2>
+            <h2>TaskFlow</h2>
             <ul>
                 <li><a href="professor_dashboard.html">Dashboard</a></li>
                 <li><a href="professor_profile.html">View Profile</a></li>
@@ -29,9 +29,7 @@
                 <li><a href="manageProject.html">Manage Projects</a></li>
                 <li><a href="login.html">Logout</a></li>
             </ul>
-            <ul>
-                <li><a href="logout.html" class="logout">Logout</a></li>
-            </ul>
+          
         </nav>
     <main class="dashboard-container">
         <header class="top-banner">
