--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -21,7 +21,7 @@
 <body>
     <div class="menu-icon"><i class="fas fa-bars"></i></div>
         <nav class="navbar">
-            <h2>Dashboard</h2>
+            <h2>TaskFlow</h2>
             <ul>
                 <li><a href="professor_dashboard.html">Dashboard</a></li>
                 <li><a href="professor_profile.html">View Profile</a></li>
