--- a/templates/student_profile.html
+++ b/templates/student_profile.html
@@ -24,11 +24,11 @@
         <nav class="navbar">
             <h2>TaskFlow</h2>
             <ul>
-                <li><a href="professor_dashboard.html">Dashboard</a></li>
-                <li><a href="professor_profile.html">View Profile</a></li>
-                <li><a href="Create.html">Create Project</a></li>
-                <li><a href="manageProject.html">Manage Projects</a></li>
-                <li><a href="login.html">Logout</a></li>
+                <li><a href="/student-dashboard">Dashboard</a></li>
+                <li><a href="/student/profile">View Profile</a></li>
+                <form action="/logout" method="POST">
+                    <button type="submit">Logout</a></li>
+                </form>
             </ul>
         </nav>
 
