--- a/static/professor_dashboard.css
+++ b/static/professor_dashboard.css
@@ -51,7 +51,14 @@ body {
     color: white;
     text-decoration: none;
 }
-
+.navbar button {
+    background-color: #D5006D;
+    color: white;
+    border: none;
+    font-size: medium;
+    border-radius: 4px;
+    cursor: pointer;
+}
 
 /* Sidebar */
 .sidebar {
