--- a/static/professor_profile.css
+++ b/static/professor_profile.css
@@ -70,7 +70,14 @@ body {
     text-decoration: none;
 }
 
-
+.navbar button {
+    background-color: #D5006D;
+    color: white;
+    border: none;
+    font-size: medium;
+    border-radius: 4px;
+    cursor: pointer;
+}
 .sidebar {
     width: 220px;
     background-color: #fff;
