--- a/templates/professor_profile.html
+++ b/templates/professor_profile.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Student Profile</title>
+    <title>Professor Profile</title>
     <link rel="stylesheet" href="../static/professor_profile.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         .navbar {
@@ -23,11 +24,19 @@
         <nav class="navbar">
             <h2>TaskFlow</h2>
             <ul>
-                <li><a href="professor_dashboard.html">Dashboard</a></li>
-                <li><a href="professor_profile.html">View Profile</a></li>
-                <li><a href="Create.html">Create Project</a></li>
-                <li><a href="manageProject.html">Manage Projects</a></li>
-                <li><a href="login.html">Logout</a></li>
+                <li><a href="/professor-dashboard">Dashboard</a></li>
+                <li><a href="/professor/profile">View Profile</a></li>
+                <li><form action="/add-projects" method="GET">
+                    <button type="submit">Create Project</button>
+                </form></li>
+                <li>
+                    <form action="/manage-projects" method="GET">
+                        <button type="submit">Manage Project</button>
+                    </form>
+                <li>
+                    <form action="/logout" method="POST">
+                        <button type="submit">Logout</a></li>
+                    </form>
             </ul>
          
         </nav>
@@ -40,7 +49,7 @@
 
         <div class="profile-details">
             <h2>{{ user.name }}</h2>
-            <p>Professor</p>
+            <p>Professor <a href='/update-profile-prof'><i class="bi bi-pencil-fill" style="cursor:pointer"></i></a></p>
         </div>
 
         <section class="info-section">
